# dfl-ckanext

./: MANIFEST.in  README.md  requirements.txt  setup.cfg  test.ini
ckanext/gla/: auth.py  custom_fields.py  email.py  form.py  helpers.py  organization.py  plugin.py  search.py  timestamps.py  user.py  views.py
ckanext/gla/assets/: accordion.js  script.js  search_result_logging.js  webassets.yml
ckanext/gla/login/: login.py
ckanext/gla/public/: gla.css
ckanext/gla/search_highlight/: action.py  query.py
ckanext/gla/templates/: base.html  error_document_template.html  following.html  footer.html  header.html  page-search.html  page.html  privacy.html
ckanext/gla/templates/about/: accessibility.html  credits.html  data-governance-and-quality.html  data-quality-standards.html  frequently-asked-questions.html  index.html  privacy-policy.html  terms-and-conditions.html
ckanext/gla/templates/admin/: index.html
ckanext/gla/templates/ckanext_pages/: base_form.html  page.html
ckanext/gla/templates/emails/: login_link_email.html  reset_password.html  verify_email.html
ckanext/gla/templates/home/: layout3.html
ckanext/gla/templates/organization/: index.html  read.html
ckanext/gla/templates/package/: base.html  edit_base.html  read.html  read_base.html  resource_read.html  search.html
ckanext/gla/templates/snippets/: beta_banner.html  facet_list.html  favourites.html  package_item.html  package_list.html  search_form.html  search_result_text.html
ckanext/gla/templates/source/: new_source_form.html
ckanext/gla/templates/user/: dashboard.html  edit.html  edit_user_form.html  list.html  login.html  new.html  new_user_form.html  (+3 more)
ckanext/gla/tests/: test_plugin.py
(+13 files in other folders)
