[metadata]
name = ckanext-gla
version = 0.0.1
description = Demo GLA theme
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Swirrl/ckanext-gla
author = Kiran Joshi
author_email = kiran@swirrl.com
license = AGPL
classifiers =
            Development Status :: 4 - Beta
            License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)
            Programming Language :: Python :: 3.7
            Programming Language :: Python :: 3.8
            Programming Language :: Python :: 3.9
            Programming Language :: Python :: 3.10
keywords = CKAN GLA

[options]
packages = find:
namespace_packages = ckanext
install_requires =
include_package_data = True

[options.entry_points]
ckan.plugins =
             gla = ckanext.gla.plugin:GlaPlugin

babel.extractors =
                 ckan = ckan.lib.extract:extract_ckan

[options.extras_require]

[extract_messages]
keywords = translate isPlural
add_comments = TRANSLATORS:
output_file = ckanext/gla/i18n/ckanext-gla.pot
width = 80

[init_catalog]
domain = ckanext-gla
input_file = ckanext/gla/i18n/ckanext-gla.pot
output_dir = ckanext/gla/i18n

[update_catalog]
domain = ckanext-gla
input_file = ckanext/gla/i18n/ckanext-gla.pot
output_dir = ckanext/gla/i18n
previous = true

[compile_catalog]
domain = ckanext-gla
directory = ckanext/gla/i18n
statistics = true

[tool:pytest]
filterwarnings =
        ignore::sqlalchemy.exc.SADeprecationWarning
        ignore::sqlalchemy.exc.SAWarning
        ignore::DeprecationWarning
addopts = --ckan-ini test.ini
